Fix font on small screen

--- a/style.css
+++ b/style.css
@@ -153,3 +153,19 @@ body {
         margin: 20px;
     }
 }
+
+@media (max-height: 800px) {
+#enea {
+    font-size: 88px;
+}
+#giorno, #mese, #ora {
+    font-size: 24px;
+}
+#numero {
+    font-size: 60px;
+}
+#rinfresco,
+#indirizzo, #conferma, #felice {
+    font-size: 22px;
+}
+}
